--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./main.js" async></script>
     <title>Popular Fantasy Searches</title>
   </head>
   <body>
     <header>
-      <h1 class="ranking">Top 5 Best Selling Costumes</h1>
+      <h1 class="ranking" title="Click on to see more!">
+        Top 5 Best Selling Costumes
+      </h1>
     </header>
     <ol>
       <li id="first">Harry Potter</li>
@@ -18,5 +21,4 @@
       <li id="fifth">Hagrid</li>
     </ol>
   </body>
-  <script src="./main.js"></script>
 </html>
